appended leaflet routing control to dashboard

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -52,6 +52,12 @@
     overflow-y: scroll;
     z-index: 9999;
 }
+.search-result-container-hide {
+    display: none;
+    width: 0;
+    height: 0;
+    z-index: 9999;
+}
 .location-btn {
     width: 90%;
     position: absolute;
