--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -136,12 +136,21 @@
     }
     .intro-text {
         z-index: 9999;
+        bottom: 30%;
     }
     .intro-text h1 {
         font-size: 1.2rem;
     }
     .intro-text p {
         font-size: .9rem;
+    }
+    .dashboard-intro {
+        top: 40%;
+        right: 50%;
+        transform: translate(50%, -40%);
+    }
+    .location-btn {
+        padding: 0;  
     }
  }
 @media (min-width: 768px) and (max-width: 810px) {
