--- a/src/styles/SavesComponent.css
+++ b/src/styles/SavesComponent.css
@@ -9,3 +9,15 @@
     border-radius: 4px;
     box-shadow: 1px 2px 10px grey;
 }
+.saved-station {
+    transition: all .2s ease-in-out;
+}
+.saved-station:hover {
+    cursor: pointer;
+    background: rgba(255, 251, 251, 0.582);
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    transition: all .2s ease-in-out;
+}
