--- a/src/styles/SavesComponent.css
+++ b/src/styles/SavesComponent.css
@@ -1,13 +1,17 @@
 .saves-container {
-    width: 35px;
-    height: 35px;
-    background-color: #fff;
+    width: 32px;
+    height: 32px;
+    background-color: #ffffff;
     position: fixed;
     top: 13%;
     right: .8%;
     z-index: 9999;
-    border-radius: 4px;
-    box-shadow: 1px 2px 10px grey;
+    border-radius: 2px;
+    border: 1px solid rgba(128, 128, 128, 0.452);
+    box-shadow: 1px 0px 2px 1px grey;
+}
+.saves-container:hover {
+    cursor: pointer;
 }
 .saved-station {
     transition: all .2s ease-in-out;
